refactor(locales): rename loading status key

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -1,5 +1,5 @@
 {
-  "globalLoading": "Lade...",
+  "globalStatusLoading": "Lade...",
   "globalPlaceholderUrl": "https://websei.te",
   "globalStatusError": "Fehler",
   "globalValidationFailed": "Bitte überprüfe deine Eingaben 🙈",
