--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,5 @@
 {
-  "globalLoading": "Loading...",
+  "globalStatusLoading": "Loading...",
   "globalPlaceholderUrl": "https://websi.te",
   "globalStatusError": "Error",
   "globalValidationFailed": "Please check your input 🙈",
