feat(site)!: set description using plugin
Must set site description using the `globalSeoSiteDescription` i18n key.

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -1,5 +1,6 @@
 {
   "globalPlaceholderUrl": "https://websei.te",
+  "globalSeoSiteDescription": "Vio ist {'@'}dargmueslis Nuxt layer.",
   "globalStatusError": "Fehler",
   "globalStatusLoading": "Lade...",
   "globalValidationFailed": "Bitte überprüfe deine Eingaben 🙈",
