refactor(site-config): move to i18n

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -1,7 +1,6 @@
 {
   "globalPlaceholderEmailAddress": "e-mail{'@'}adres.se",
   "globalPlaceholderUrl": "https://websei.te",
-  "globalSeoSiteDescription": "Vio ist {'@'}dargmueslis Nuxt layer.",
   "globalStatusError": "Fehler",
   "globalStatusLoading": "Lade...",
   "globalValidationFailed": "Bitte überprüfe deine Eingaben 🙈",
@@ -9,5 +8,8 @@
   "globalValidationFormatIncorrect": "Falsches Format",
   "globalValidationFormatUrlHttps": "Muss mit \"https://\" beginnen",
   "globalValidationLength": "Zu lang",
-  "globalValidationRequired": "Pflichtfeld"
+  "globalValidationRequired": "Pflichtfeld",
+  "nuxtSiteConfig": {
+    "description": "Vio ist {'@'}dargmueslis Nuxt layer."
+  }
 }
