--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,7 +1,6 @@
 {
   "globalPlaceholderEmailAddress": "email{'@'}addre.ss",
   "globalPlaceholderUrl": "https://websi.te",
-  "globalSeoSiteDescription": "Vio is {'@'}dargmuesli's Nuxt layer.",
   "globalStatusError": "Error",
   "globalStatusLoading": "Loading...",
   "globalValidationFailed": "Please check your input 🙈",
@@ -9,5 +8,8 @@
   "globalValidationFormatIncorrect": "Incorrect format",
   "globalValidationFormatUrlHttps": "Must start with \"https://\"",
   "globalValidationLength": "Too long",
-  "globalValidationRequired": "Required"
+  "globalValidationRequired": "Required",
+  "nuxtSiteConfig": {
+    "description": "Vio is {'@'}dargmuesli's Nuxt layer."
+  }
 }
