feat(deps)!: drop `sweetalert2`

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "globalError": "Error",
   "globalSeoOgImageAlt": "Social Preview Image for a Vio webpage.",
   "globalPlaceholderEmailAddress": "email{'@'}addre.ss",
   "globalPlaceholderUrl": "https://websi.te",
