--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -1,4 +1,5 @@
 {
+  "globalError": "Fehler",
   "globalSeoOgImageAlt": "Social Preview Image für eine Vio Webseite.",
   "globalPlaceholderEmailAddress": "e-mail{'@'}adres.se",
   "globalPlaceholderUrl": "https://websei.te",
